fix(scrollbar): firefox hide scrollbar

--- a/rider/rider-webapp/app/containers/Flow/Flow.less
+++ b/rider/rider-webapp/app/containers/Flow/Flow.less
@@ -100,6 +100,7 @@
   overflow-y: scroll;
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
+  overflow: -moz-hidden-unscrollable;
   &::-webkit-scrollbar {
     display: none;
   }
